--- a/localization/english/br_buildings_l_english.yml
+++ b/localization/english/br_buildings_l_english.yml
@@ -13,3 +13,13 @@
  building_Mecca: "Mecca"
  building_Venice: "Venice Arsenal"
  building_Notre_Dame: "Notre Dame Cathedral"
+ building_embassy: "Embassy"
+ embassy: "Embassies"
+ embassy_desc: "Official diplomatic offices where foreign ambassadors are hosted with warm smiles, elegantly resolving the nation's little 'misunderstandings'. "
+ pmg_embassy: "Embassy"
+ pm_base_embassy: "Legation Quarter"
+ pm_advanced_embassy: "Consulate Hall"
+ pm_high_advanced_embassy: "Majestic Diplomatic Hall"
+ pmg_working_method: "Communications"
+ pm_embassy_basic: "Written Communications"
+ pm_embassy_telephone: "Telephone Communications"
