--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -25,17 +25,17 @@
  #serbia_rebellion.1.f: "Envoys from the Serbian Exarchate arrived in Konstantinople informing us of their declaration of independence."
  #serbia_rebellion.1.a: "Unacceptable, Dispatch the Tagmata to Belgrade at once!"
 
- anatolian_revolt.1.t: "Popular Anatolian Strategoi Revolts"
- anatolian_revolt.1.d: "Powerful Strategoi in the Anatolia interior have rallied behind Bardas Phokas in his demands for greater autonomy for the region."
- anatolian_revolt.1.f: "Dynatói in the Anatolia interior have pledged their support to the Strategoi revolt led by Bardas Phokas in his demands for greater autonomy for the region."
- anatolian_revolt.1.a: "Bardas Phokas is clearly a threat and must be crushed once and for all."
- anatolian_revolt.1.b: "Grant Autonomy to the rebels."
+ br_anatolian_revolt.1.t: "Popular Anatolian Strategoi Revolts"
+ br_anatolian_revolt.1.d: "Powerful Strategoi in the Anatolia interior have rallied behind Bardas Phokas in his demands for greater autonomy for the region."
+ br_anatolian_revolt.1.f: "Dynatói in the Anatolia interior have pledged their support to the Strategoi revolt led by Bardas Phokas in his demands for greater autonomy for the region."
+ br_anatolian_revolt.1.a: "Bardas Phokas is clearly a threat and must be crushed once and for all."
+ br_anatolian_revolt.1.b: "Grant Autonomy to the rebels."
 
- anatolian_revolt.2.t: "Popular Pontic Strategoi Revolts"
- anatolian_revolt.2.d: "Powerful Strategoi in the Pontic hinderland have rallied behind Ioannes Komnenos in his demands for greater autonomy for the region."
- anatolian_revolt.2.f: "Dynatói in the Pontic hinderland have pledged their support to the Strategoi revolt led by Ioannes Komnenos in his demands for greater autonomy for the region."
- anatolian_revolt.2.a: "Ioannes Komnenos is clearly a threat and must be crushed once and for all."
- anatolian_revolt.2.b: "Grant Autonomy to the rebels."
+ br_anatolian_revolt.2.t: "Popular Pontic Strategoi Revolts"
+ br_anatolian_revolt.2.d: "Powerful Strategoi in the Pontic hinderland have rallied behind Ioannes Komnenos in his demands for greater autonomy for the region."
+ br_anatolian_revolt.2.f: "Dynatói in the Pontic hinderland have pledged their support to the Strategoi revolt led by Ioannes Komnenos in his demands for greater autonomy for the region."
+ br_anatolian_revolt.2.a: "Ioannes Komnenos is clearly a threat and must be crushed once and for all."
+ br_anatolian_revolt.2.b: "Grant Autonomy to the rebels."
 
  greek_revolt.1.t: "Latin Intervention"
  greek_revolt.1.d: "Naval forces made up from a large Latin coalition led by Venice has quickly occupied the lightly garrisoned Islands of Cyprus, Crete and the Ionian Islands and even landed a large force taking control of Attica."
@@ -275,17 +275,17 @@
  veiled_exarchate.6.a: "Allow [SCOPE.sCountry('australis_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
  veiled_exarchate.6.b: "Enforce our will on [SCOPE.sCountry('australis_country').GetName]."
 
-
+ #Balkan Sepratists
  br_balkan_revolt.2.t: "Balkan Crisis: The [SCOPE.sState('rebelling_state_scope').GetName] Uprising"
  br_balkan_revolt.2.d: "There has been an uprising in [SCOPE.sState('rebelling_state_scope').GetName]."
- br_balkan_revolt.2.f: "The governor of the province is dead. They have chosen a new king from among their landed men, or perhaps have been supplied one by a foreign power. They claim that their rebellion seeks to liberate all people of their creed within Basileia Romaion."
+ br_balkan_revolt.2.f: "The governor of the province is dead. They have chosen a new king from among their landed men, or perhaps have been supplied one by a foreign power. They claim that their rebellion seeks to liberate all people of their nationality within Basileia Romaion."
  br_balkan_revolt.2.a: "Very well."
  revolt_in_state_tt: "An organized revolution will begin in [SCOPE.sState('rebelling_state_scope').GetName]"
 
  br_balkan_revolt.10.t: "Balkan Crisis: An Opportunity to Expand?"
  br_balkan_revolt.10.d: "With Basileia Romaion in crisis, and rightful lands of our nation in the hands of the Romaioi, we must ask if we are bold enough to strike."
  br_balkan_revolt.10.f: "For centuries it was assumed that Basileia Romaion were simply a fact of life for our people. Then came the Enlightenment, and then came Revolutions that saw the emergence of the concept of Nationalism. Lands in which people of our very same blood live and suffer under the yolk of the bloodthursty Romaioi lie directly at our border. Now may be the perfect time to accept these people, most of whom are currently in rebellion against the Romaioi as is, as ours, and send our forces in to consolidate these lands, while at the same time casting off whatever influences from Basileia Romaion remains in our government. Of course, it is also likely that Basileia Romaion will retaliate..."
- br_balkan_revolt.10.a: "The Romaion insects will be driven back!"
+ br_balkan_revolt.10.a: "The Romaioi will be driven out!"
  br_balkan_revolt.10.b: "They are still too powerful to challenge..."
 
  br_balkan_revolt.11.t: "Balkan Crisis: Incursion by the [SCOPE.sCountry('current_overlord_remover_scope').GetName]"
@@ -306,6 +306,31 @@
  br_balkan_revolt.13.a: "Crush the traitors at once!"
  br_balkan_revolt.13.b: "Grant the Doukai their demands and recognize their claim to the Exarchate of Bulgaria."
 
+ #Armenian Sepratists #Maybe Shift to Arabs
+ br_anatolian_revolt.3.t: "Resistance from the Armenians"
+ br_anatolian_revolt.3.d: "The Armenians who have remained an integral part of this empire for centuries are now begining to chafe under the just rule of the [SCOPE.sCountry('byz_scope').GetRuler.GetPrimaryRoleTitle]. Resistance movements began in Eastern Anatolia with the support of our rivals."
+ br_anatolian_revolt.3.f: "Armenians established their own organizations for independence movements. This organization is also supported by our rivals. Their goal is to reestablish a great Armenian state in Eastern Anatolia."
+ br_anatolian_revolt.3.a: "This situation will surely be resolved soon."
+
+ br_anatolian_revolt.4.t: "Local Armenian Revolt"
+ br_anatolian_revolt.4.d: "A revolt by Armenian Organizations is causing unrest in a state with a large Ethnic Armenian population. The Rebels cry out for a supposedly rightful self-liberation."
+ br_anatolian_revolt.4.f: "The ultimate goal of this organization, which is to reestablish an independent Armenian state. The non Armenian villagers also took up arms against the Armenians and expanded the conflict in the region. If our empire does not intervene in this event, there will be even more carnage to come for the people of these lands."
+ br_anatolian_revolt.4.a: "Kill all the rebels. Deport civilians as punishment."
+ br_anatolian_revolt.4.b: "Kill the rebels, deport the rebel prisoners."
+ br_anatolian_revolt.4.c: "Prevent revolt peacefully."
+ br_anatolian_revolt.4.dd: "Don't interfere."
+
+ br_anatolian_revolt.5.t: "Assassination of a Local Governor"
+ br_anatolian_revolt.5.d: "Dire news from the East! An Armenian officer of the state with secret sympathy with the resistance from his kin has assassinated the local governor in one of the far eastern states. This assassination has yey encouraged yet more violence from the Armenians."
+ br_anatolian_revolt.5.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Armenian people by shouting "Long live Great Armenia". The murderer was taken to the square to be executed. The Armenian people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
+ br_anatolian_revolt.5.a: "That Armenian bastard! They will pay for this!"
+ br_anatolian_revolt.5.b: "One murderer cannot represent all Armenians!"
+
+ br_elysium_events.1.t: "Basileia Romaion Offers us Protection"
+ br_elysium_events.1.d: "Ambassators from accross the sea have arrived in Elysium."
+ br_elysium_events.1.f: "Ambassadors have recently landed in Elysium from distant shores, suggesting that the Basileus is endeavoring to reintroduce a quasi-colonial governance structure. This potential initiative could lead to a mutually beneficial arrangement for both parties involved"
+ br_elysium_events.1.a: "Accept Protection."
+ br_elysium_events.1.b: "Elysium Stands Alone!"
 
  
 
