--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -166,6 +166,9 @@
 
  br_state_modifier_grand_port: "Grand Port"
 
+ br_balkan_modifier_preventing_attrocities: "Preventing Attrocities"
+ br_balkan_modifier_encouraging_attrocities: "Encouraging Attrocities"
+
 
 
  
