--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -27,6 +27,8 @@
  #BUK_ADJ: "Khorasani"
  BYZ: "Basileía Romaíon"
  BYZ_ADJ: "Romaíon"
+ BAD: "Thuringia"
+ BAD_ADJ: "Thuringian"
  CAS: "Asturias"
  CAS_ADJ: "Asturias"
  CAT: "Aragon"
