--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -226,20 +226,29 @@
  rule_new_world_natives_game_rule: "@br_icon! #gold Basileía Romaíon#!: New World Natives"
  setting_new_world_natives_game_rule_recognized: "Unrecognized Nations"
  setting_new_world_natives_game_rule_recognized_desc: "Certain Native Tribes in North America start off as playable Unrecognized states"
- setting_new_world_natives_game_rule_decentralized: "Decentralized Nations"
+ setting_new_world_natives_game_rule_decentralized: "Default: Decentralized Nations"
  setting_new_world_natives_game_rule_decentralized_desc: "All North American Native Tribal Nations stay as Decentralized Tribal Confederations and are not playable"
 
  rule_recognized_asians_game_rule: "@br_icon! #gold Basileía Romaíon#!: Recognized Powers in Asia"
- setting_recognized_asians_game_rule_recognized: "Recognized Nations"
+ setting_recognized_asians_game_rule_recognized: "Default: Recognized Nations"
  setting_recognized_asians_game_rule_recognized_desc: "Ming, Mughals and Japan start off as Recognized Nations"
  setting_recognized_asians_game_rule_unrecognized: "Unrecognized Asian Nations"
  setting_recognized_asians_game_rule_unrecognized_desc: "All Asian Nations start off as unrecognized."
 
  rule_caliphate_game_rule: "@br_icon! #gold Basileía Romaíon#!: Caliphate Game Rule"
- setting_caliphate_game_rule_small: "Abbasid Caliphate Small"
+ setting_caliphate_game_rule_small: "Default: Abbasid Caliphate Small"
  setting_caliphate_game_rule_small_desc: "Abbasid Caliphate starts off pushed into the Arabian desert with only Mecca and a few small vassals/tributaries"
  setting_caliphate_game_rule_large: "Abbasid Caliphate Large"
  setting_caliphate_game_rule_large_desc: "Abbasid Caliphate is resurgent, having just recently restored control of Mesopotamia,Egypt & Syria."
+
+ rule_moscovy_game_rule: "@br_icon! #gold Basileía Romaíon#!: Russia & Commonwealth Game Rule"
+ setting_moscovy_game_rule_small: "Default: Moscovy & Commonwealth fractured."
+ setting_moscovy_game_rule_small_desc: "Moscovy and to  lesser extent Commonwealth start off fractured with a many of vassals & tributaries"
+ setting_moscovy_game_rule_large: "Moscovy & Commonwealth Centralized"
+ setting_moscovy_game_rule_large_desc: "Moscovy, Commonwealth & Sweden start off having recently annexed their vassals, tributaries (Including: Novgorod, Pskov and Perm for Moscovy)."
+ setting_moscovy_game_rule_medium: "Moscovy Partially Centralized"
+ setting_moscovy_game_rule_medium_desc: "Moscovy start off having recently annexed their tributaries (Does not Include: Novgorod, Pskov and Perm for Moscovy Or Commonwealth/Sweden changes)."
+
 
 
  #Comabt units
