--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -183,7 +183,9 @@
  dyn_c_popular_front_of_byzantium: "Popular Front of Romaíon"
 
  dyn_c_kurd_princes: "Kurdish Principalities"
+ dyn_c_kurd_princes_ADJ: "Kurdish"
  dyn_c_english_lords: "English Lords"
+ dyn_c_english_lords_ADJ: "English"
 
 
  #Decentralized nations
