--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -306,14 +306,14 @@
  br_balkan_revolt.13.a: "Crush the traitors at once!"
  br_balkan_revolt.13.b: "Grant the Doukai their demands and recognize their claim to the Exarchate of Bulgaria."
 
- #Armenian Sepratists #Maybe Shift to Arabs
+ #Armenian Sepratists #Create similar events for bulgars/serbs
  br_anatolian_revolt.3.t: "Resistance from the Armenians"
  br_anatolian_revolt.3.d: "The Armenians who have remained an integral part of this empire for centuries are now begining to chafe under the just rule of the [SCOPE.sCountry('byz_scope').GetRuler.GetPrimaryRoleTitle]. Resistance movements began in Eastern Anatolia with the support of our rivals."
- br_anatolian_revolt.3.f: "Armenians established their own organizations for independence movements. This organization is also supported by our rivals. Their goal is to reestablish a great Armenian state in Eastern Anatolia."
- br_anatolian_revolt.3.a: "This situation will surely be resolved soon."
+ br_anatolian_revolt.3.f: "Armenians established their own organizations for independence. These organizations are also supported by our rivals. Their goal is to reestablish a greater Armenian nation from our eastern territories."
+ br_anatolian_revolt.3.a: "This situation will surely be resolve itself."
 
  br_anatolian_revolt.4.t: "Local Armenian Revolt"
- br_anatolian_revolt.4.d: "A revolt by Armenian Organizations is causing unrest in a state with a large Ethnic Armenian population. The Rebels cry out for a supposedly rightful self-liberation."
+ br_anatolian_revolt.4.d: "A revolt by led by an Armenian separatist Organization is causing unrest in a state with a large Ethnic Armenian population. The Rebels cry out for a supposedly rightful self-liberation."
  br_anatolian_revolt.4.f: "The ultimate goal of this organization, which is to reestablish an independent Armenian state. The non Armenian villagers also took up arms against the Armenians and expanded the conflict in the region. If our empire does not intervene in this event, there will be even more carnage to come for the people of these lands."
  br_anatolian_revolt.4.a: "Kill all the rebels. Deport civilians as punishment."
  br_anatolian_revolt.4.b: "Kill the rebels, deport the rebel prisoners."
@@ -321,16 +321,36 @@
  br_anatolian_revolt.4.dd: "Don't interfere."
 
  br_anatolian_revolt.5.t: "Assassination of a Local Governor"
- br_anatolian_revolt.5.d: "Dire news from the East! An Armenian officer of the state with secret sympathy with the resistance from his kin has assassinated the local governor in one of the far eastern states. This assassination has yey encouraged yet more violence from the Armenians."
- br_anatolian_revolt.5.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Armenian people by shouting "Long live Great Armenia". The murderer was taken to the square to be executed. The Armenian people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
- br_anatolian_revolt.5.a: "That Armenian bastard! They will pay for this!"
+ br_anatolian_revolt.5.d: "Dire news from the East! An Armenian officer of the state with secret sympathy with the resistance has assassinated the local governor in one of our eastern states. This assassination has encouraged more violence from the Armenians."
+ br_anatolian_revolt.5.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Armenian people by shouting "Long live Great Armenia". The murderer was taken to the square and executed. The Armenian people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
+ br_anatolian_revolt.5.a: "They will pay for this!"
  br_anatolian_revolt.5.b: "One murderer cannot represent all Armenians!"
 
- br_elysium_events.1.t: "Basileia Romaion Offers us Protection"
- br_elysium_events.1.d: "Ambassators from accross the sea have arrived in Elysium."
- br_elysium_events.1.f: "Ambassadors have recently landed in Elysium from distant shores, suggesting that the Basileus is endeavoring to reintroduce a quasi-colonial governance structure. This potential initiative could lead to a mutually beneficial arrangement for both parties involved"
- br_elysium_events.1.a: "Accept Protection."
- br_elysium_events.1.b: "Elysium Stands Alone!"
+ br_new_world_events.1.t: "Basileia Romaion Offers us Protection"
+ br_new_world_events.1.d: "Ambassators from accross the sea have arrived in Elysium."
+ br_new_world_events.1.f: "Ambassadors have recently landed in Elysium from distant shores, suggesting that the Basileus is endeavoring to reintroduce a quasi-colonial governance structure. This potential initiative could lead to a mutually beneficial arrangement for both parties involved"
+ br_new_world_events.1.a: "Accept Protection."
+ br_new_world_events.1.b: "Elysium Stands Alone!"
+
+ br_balkan_revolt.14.t: "Bulgarian Separatism"
+ br_balkan_revolt.14.d: "The Boulgaroí have remained an integral part of this empire for centuries are now begining to chafe under the just rule of the [SCOPE.sCountry('byz_scope').GetRuler.GetPrimaryRoleTitle]. Resistance movements began in Paristrion with the support of our enemies."
+ br_balkan_revolt.14.f: "Bulgarians have established organizations for their independence. These organizations are supported by our rivals. Their goal is to reestablish an Independent Bulgaria from our rightful territory."
+ br_balkan_revolt.14.a: "This situation will surely be resolve itself."
+
+ br_balkan_revolt.15.t: "Local Bulgarian Revolt"
+ br_balkan_revolt.15.d: "A revolt by led by an Bulgarian separatist Organization is causing unrest in a state with a large Boulgaroí population. The Rebels cry out for a supposedly rightful self-liberation."
+ br_balkan_revolt.15.f: "The ultimate goal of this organization, which is to establish an independent Bulgarian state. The non Boulgaroí villagers also took up arms against the Bulgarians and expanded the conflict in the region. If our empire does not intervene in this event, there will be even more carnage to come for the people of these lands."
+ br_balkan_revolt.15.a: "Kill all the rebels. Deport civilians as punishment."
+ br_balkan_revolt.15.b: "Kill the rebels, deport the rebel prisoners."
+ br_balkan_revolt.15.c: "Prevent revolt peacefully."
+ br_balkan_revolt.15.dd: "Don't interfere."
+
+ br_balkan_revolt.16.t: "Assassination of a Local Governor"
+ br_balkan_revolt.16.d: "Dire news from the Balkans! An Boulgaroí officer of the state with secret sympathy with the resistance has assassinated the local governor in one of our balkan states. This assassination has encouraged more violence from the Bulgarians."
+ br_balkan_revolt.16.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Bulgarian people by shouting "Long live Bulgaria". The murderer was taken to the square and executed. The Boulgaroí people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
+ br_balkan_revolt.16.a: "They will pay for this!"
+ br_balkan_revolt.16.b: "One murderer cannot represent all Boulgaroí!"
+
 
  
 
