--- a/localization/english/br_flavor_events_l_english.yml
+++ b/localization/english/br_flavor_events_l_english.yml
@@ -50,5 +50,12 @@
  br_nation_startup_event.10.f: "Hungary flavor story in progress"
  br_nation_startup_event.10.a: "Hungary"
 
+ br_new_world_events.2.t: "Colonists"
+ br_new_world_events.2.d: "Colonists immigrating to the New World."
+ br_new_world_events.2.f: "A large number of our citizens have decided to become Colonists and move away to the new world."
+ br_new_world_events.2.a: "We cannot stop them."
+
+
+
 
 
