--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -235,19 +235,33 @@
  setting_recognized_asians_game_rule_unrecognized: "Unrecognized Asian Nations"
  setting_recognized_asians_game_rule_unrecognized_desc: "All Asian Nations start off as unrecognized."
 
- rule_caliphate_game_rule: "@br_icon! #gold Basileía Romaíon#!: Caliphate Game Rule"
+ rule_caliphate_game_rule: "@br_icon! #gold Basileía Romaíon#!: Caliphate"
  setting_caliphate_game_rule_small: "Default: Abbasid Caliphate Small"
  setting_caliphate_game_rule_small_desc: "Abbasid Caliphate starts off pushed into the Arabian desert with only Mecca and a few small vassals/tributaries"
  setting_caliphate_game_rule_large: "Abbasid Caliphate Large"
  setting_caliphate_game_rule_large_desc: "Abbasid Caliphate is resurgent, having just recently restored control of Mesopotamia,Egypt & Syria."
 
- rule_moscovy_game_rule: "@br_icon! #gold Basileía Romaíon#!: Russia & Commonwealth Game Rule"
+ rule_moscovy_game_rule: "@br_icon! #gold Basileía Romaíon#!: Russia & Commonwealth"
  setting_moscovy_game_rule_small: "Default: Moscovy & Commonwealth fractured."
  setting_moscovy_game_rule_small_desc: "Moscovy and to  lesser extent Commonwealth start off fractured with a many of vassals & tributaries"
  setting_moscovy_game_rule_large: "Moscovy & Commonwealth Centralized"
- setting_moscovy_game_rule_large_desc: "Moscovy, Commonwealth & Sweden start off having recently annexed their vassals, tributaries (Including: Novgorod, Pskov and Perm for Moscovy)."
+ setting_moscovy_game_rule_large_desc: "Moscovy & Commonwealth start off having recently annexed their vassals, tributaries (Including: Novgorod, Pskov and Perm for Moscovy)."
  setting_moscovy_game_rule_medium: "Moscovy Partially Centralized"
- setting_moscovy_game_rule_medium_desc: "Moscovy start off having recently annexed their tributaries (Does not Include: Novgorod, Pskov and Perm for Moscovy Or Commonwealth/Sweden changes)."
+ setting_moscovy_game_rule_medium_desc: "Moscovy start off having recently annexed their tributaries (Does not Include: Novgorod, Pskov and Perm for Moscovy Or Commonwealth changes)."
+
+ rule_north_sea_game_rule: "@br_icon! #gold Basileía Romaíon#!: NSE & Sweden"
+ setting_north_sea_game_rule_default: "Default: NSE & Sweden Personal Unions"
+ setting_north_sea_game_rule_default_desc: "North Sea Empire & Sweden both start with various Personal Unions "
+ setting_north_sea_game_rule_large: "NSE & Sweden Centralized."
+ setting_north_sea_game_rule_large_desc: "North Sea Empire & Sweden both start off having recently incorporated their Personal Unions."
+
+ rule_hre_europe_game_rule: "@br_icon! #gold Basileía Romaíon#!: Bohemia & Hungary"
+ setting_hre_europe_game_rule_default: "Default: Bohemia & Hungary with puppets"
+ setting_hre_europe_game_rule_default_desc: "Bohemia & Hungary start with puppets"
+ setting_hre_europe_game_rule_medium: "Bohemia & Hungary annexed puppets."
+ setting_hre_europe_game_rule_medium_desc: "Bohemia & Hungary start off having annexed their puppets."
+ setting_hre_europe_game_rule_large: "HRE Included"
+ setting_hre_europe_game_rule_large_desc: "This option includes the above changes for Bohemia and Hungary as well as the Holy Roman Empire annexing most of their vassals."
 
 
 
@@ -270,10 +284,10 @@
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
 
  #Power Blocs
- Romaion_Bloc: "Koinopolitia" #Basileía Romaíon
+ Romaion_Bloc: "Basileía ton Romaíon" #Basileía Romaíon #Koinopolitia
  Imperial_HRE: "Universum Regnum"
  Venetia_Trade_League: "Lega Italica"
- #Genoa_Trade_League: "Genoan League"
+ Genoa_Trade_League: "Lega Genovese"
  Amsterdam_Alliance: "Handelsovereenkomst"
  Alexandria_Accords: "Alexandria Symmachia"
  Andalusian_league: "Al-Andalus"
