--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -18,7 +18,7 @@
  STATE_IOWA: "Ayúhwa"
  STATE_MINNESOTA: "Minnisóta"
  STATE_WISCONSIN: "Viskónsin"
- STATE_NEW_YORK: "Néa Attikí"
+ STATE_NEW_YORK: "Néa Ipeiros"
  STATE_INDIANA: "Maumia"
  STATE_MICHIGAN: "Míkigan"
  STATE_OHIO: "Shawnia"
