--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -54,24 +54,23 @@
  frankish_revolt.1.a: "Crush and fully integrate all of Francia into our direct domain!"
  frankish_revolt.1.b: "Recognize our german speaking subjects as equal to the latin speakers and gave the lords greater autonomy."
 
- aegyptian_crisis_events.1.t: "Reasserting Our Authority in Syria"
- aegyptian_crisis_events.1.d: "Aegypt seized most of our Levantine provinces in 1733 after its Exarach tried and failed to overthrow the entire Romaíon government. The time to reclaim the lands we lost in that war is long overdue.\n\nHowever, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe."
- aegyptian_crisis_events.1.f: "\"What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our fate on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!\""
- aegyptian_crisis_events.1.a: "We must see to it that they are on our side."
- aegyptian_crisis_events.1.a.tt: "[THIS.GetCountry.GetName] will be offered an [concept_active_interest] in the region."
- aegyptian_crisis_events.1.b: "We do not need their approval to take what is ours."
+aegyptian_crisis_events.1.t: "Reasserting Our Control in Syria"
+aegyptian_crisis_events.1.d: "The Aegyptian Exarchate, nominally our vassal, has been a valuable and integral part of this empire for centuries but has been acting independently under the rule of Ioannes Komnenos. We tolerated the status quo for too long, and this recent aggression must be met with overwhelming force."
+aegyptian_crisis_events.1.f: "\"What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our destiny on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!\""
+aegyptian_crisis_events.1.a: "Prepare our armies and our diplomats!"
 
  aegyptian_crisis_events.2.t: "The Romaíon Incursion"
- aegyptian_crisis_events.2.d: "The Romaíoi have begun their machinations to retake the lands we won from them in 1733. This is a violation of our sovereignty! However, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe, giving us a chance to gain powerful allies in the conflict."
+ aegyptian_crisis_events.2.d: "The Romaíoi have begun their machinations to retake the lands we won from them. This is a violation of our sovereignty! However, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe, giving us a chance to gain powerful allies in the conflict."
  aegyptian_crisis_events.2.f: "\"I believe the Basilius and I have some unfinished business to attend to.\""
  aegyptian_crisis_events.2.a: "We must resist this aggression!"
- aegyptian_crisis_events.2.a.tt: "All European [Concept('concept_great_power', '$concept_great_powers$')] will be offered an [concept_active_interest] in our region."
+ aegyptian_crisis_events.2.a.tt: "Seek Aid of the Venetians."
 
- aegyptian_crisis_events.4.t: "The Aegyptian Crisis"
- aegyptian_crisis_events.4.d: "The Basileía Romaíon's attempt to regain control of Aegypt has become an international incident. Our involvement may tip the balance of power in the region."
- aegyptian_crisis_events.4.f: "\"I'm not sure why we would ever express any interest in the Middle East. There's so little of value in those far-off lands. Deserts, sand, a wasteland.\""
- aegyptian_crisis_events.4.a: "We need to keep an eye on the region."
- aegyptian_crisis_events.4.b: "We have no interest in this crisis."
+aegyptian_crisis_events.4.t: "The Aegyptian Conflict"
+aegyptian_crisis_events.4.d: "Reports have emerged from the Syrian Frontier; Aegyptian forces have advanced along the coast, capturing most of the Syrian Exarchate."
+aegyptian_crisis_events.4.f: "Fortunately, our Generals in the area quickly secured Antioch. This situation presents an opportunity for us to not only reclaim Syria but also reassert our control over Aegypt."
+aegyptian_crisis_events.4.a: "Immediately declare war on the rebellious Aegyptian Exarchate"
+aegyptian_crisis_events.4.b: "We cannot afford a broader conflict."
+
 
  # Palaiologos Reforms Events
 
