--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -1,10 +1,17 @@
 ﻿l_english:
- #FRA_FLAVOR_TEXT: ""
- #PER_FLAVOR_TEXT: ""
- #NET_FLAVOR_TEXT: ""
- #SAR_FLAVOR_TEXT: ""
- #DEN_FLAVOR_TEXT: ""
- #SWE_FLAVOR_TEXT: ""
+ FRA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ PER_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ NET_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ DEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ SWE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ HRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ BYZ_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ br_elysium_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ VEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ LOM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ MAL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ br_tartaria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # South-East Asia
  LAN_FLAVOR_TEXT: "The Republic of Lanfang was established by a democratic syndicate of Chinese miners hoping to exploit the gold reserves of Borneo. Can Lanfang resist the advances of the Dutch and achieve the prosperity it seeks?"
@@ -25,13 +32,13 @@
   # Italy
  PAP_FLAVOR_TEXT: "Though the political power of the Catholic Church has waned over the centuries, the Pope still presides over the Papal States. Does faith still rule the hearts of men?"
  TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Tuscany fare as liberalism and nationalism compete over the hearts and minds of Italians?"
- SIC_FLAVOR_TEXT: "Political repression of both liberals and Sicilian separatists is proving ineffective, with both movements moving underground and gaining supporters. What will the Two Sicilies look like after the situation inevitably comes to a head?"
- #PAR_FLAVOR_TEXT: ""
- #LUC_FLAVOR_TEXT: ""
- #MOD_FLAVOR_TEXT: ""
+ SIC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ PAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ LUC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ MOD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # Germans
- BAV_FLAVOR_TEXT: "In the wake of recent revolutions across Europe, Bavaria has turned to reaction. But the embers of rebellion still burn; will Bavaria be consumed by the flames?"
+ BAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
  
   #Central Asia
  KHI_FLAVOR_TEXT: "In defiance of both Persia and the Golden Horde, Khiva is an independent power flourishing under the rule of the Khan. Can Khiva protect its independence?"
@@ -40,9 +47,9 @@
  AFG_FLAVOR_TEXT: "The Persian and Mughal empires watch Afghanistan with greedy eyes, jealous of its opium fields. Is Afghanistan still the graveyard of empires?"
   
   # Maghreb
- #TRI_FLAVOR_TEXT: "Following a long period of de facto independence, Tripolitania has once again fallen under Ottoman rule. Will the Barbary Pirates sail again?"
- #ALD_FLAVOR_TEXT: "Algeria lost much of its coastline to Al-Andalus in the aftermath of the Barbary Wars. Can the remnants of this nation fend off further incursions?"
- #MOR_FLAVOR_TEXT: "No longer under Ottoman protection, Morocco is vulnerable to French and Spanish expansionism. Can Morocco survive the imperialist onslaught?"
+ TRI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ ALD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+ MOR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
 
   # Africa
  SOK_FLAVOR_TEXT: "Under the banner of the Fulani Jihad, the Sokoto Caliphate is expanding rapidly. Can Sokoto unite West Africa and resist the Western powers?"
