--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -29,8 +29,8 @@
  colonial_dutch: "Colonial-Dutch"
  colonial_british: "New Anglander"
  colonial_andalusian: "New Grenadian"
- colonial_japanese: "Colonial-Japanese"
- colonial_chinese: "Colonial-Chinese"
+ colonial_japanese: "Kōkaijin"
+ colonial_chinese: "Huáqiáo"
 
  #Afro Cultures.
  afro_french: "Afro-French"
