--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -270,6 +270,9 @@
  #combat_unit_type_themata_infantry: "Themata Infantry"
  #combat_unit_type_tagmata_infantry: "Tagmata Infantry"
  #combat_unit_type_cataphract: "Kataphraktoi"
+ combat_unit_type_caravel: "Caravel"
+ combat_unit_type_screw_frigate: "Screw Frigate"
+ combat_unit_type_carrack: "Carrack"
 
  #Laws
  law_tribal_armies: "Tribal Society"
