--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -263,6 +263,15 @@
  setting_hre_europe_game_rule_large: "HRE Included"
  setting_hre_europe_game_rule_large_desc: "This option includes the above changes for Bohemia and Hungary as well as the Holy Roman Empire annexing most of their vassals."
 
+ rule_african_tribals_game_rule: "@br_icon! #gold Basileía Romaíon#!: African Tribals"
+ setting_african_tribals_game_rule_decentralized: "Default: African Tribals Decentralized"
+ setting_african_tribals_game_rule_decentralized_desc: "Most of Africa is decentralized and unplayable."
+ setting_african_tribals_game_rule_unrecognized: "More African Nations Playable"
+ setting_african_tribals_game_rule_unrecognized_desc: "This option makes Ashanti, Dahomey, Sokoto, Kongo & Zulu unreconzied Playable nations."
+ #setting_african_tribals_game_rule_recognized: "Mali and Abyssinia made recognized powers."
+ #setting_african_tribals_game_rule_recognized_desc: "This option makes Mali and Abyssinia recognized powers and makes Ashanti, Dahomey, Sokoto, Kongo & Zulu unreconzied Playable nations."
+
+
 
 
  #Comabt units
