--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -204,3 +204,123 @@
 
  # Patagonian
  Victor_2: "Victor"
+
+
+ #Irish
+
+ #Male First Names
+ Aodh: "Aodh"
+ Aonghas: "Aonghas"
+ Agaistin: "Ágaistín"
+ Carthach: "Cárthach"
+ Ciaran: "Ciarán"
+ Colm: "Colm"
+ Conchur: "Conchúr"
+ Cormac: "Cormac"
+ Daithi: "Dáithí"
+ Diarmuid: "Diarmuid"
+ Donal: "Dónal"
+ Dubhghlas: "Dubhghlas"
+ Eibhear: "Éibhear"
+ Eoghan: "Eoghan"
+ Fearghas: "Fearghas"
+ Fionnbharr: "Fionnbharr"
+ Iosac: "Íosac"
+ Lochlann: "Lochlann"
+ Micheal: "Mícheál"
+ Naomhan: "Naomhán"
+ Odhran: "Odhrán"
+ Padraig: "Pádraig"
+ Pol: "Pól"
+ Ruairi: "Ruairí"
+ Seoirse: "Seoirse"
+ Tadhg: "Tadhg"
+ Tuathal: "Tuathal"
+
+ #Female First Names
+ Ailbhe: "Ailbhe"
+ Aine: "Áine"
+ Aisling: "Aisling"
+ Aoife: "Aoife"
+ Aigneis: "Aignéis"
+ Aingeal: "Aingeal"
+ Blathnaid: "Bláthnaid"
+ Beatris: "Béatrís"
+ Brid: "Bríd"
+ Caoimhe: "Caoimhe"
+ Catriona: "Catríona"
+ Ciara: "Ciara"
+ Cliodhna: "Clíodhna"
+ Cristiona: "Cristíona"
+ Deirbhfhile: "Deirbhfhile"
+ Doireann: "Doireann"
+ Eabha: "Éabha"
+ Eadaoin: "Éadaoin"
+ Eilis: "Eilís"
+ Eithne: "Eithne"
+ Grainne: "Gráinne"
+ Ide: "Íde"
+ Isibeal: "Isibéal" 
+ Mairead: "Mairéad"
+ Meabh: "Méabh"
+ Muireann: "Muireann"
+ Nuala: "Nuala"
+ Sadhbh: "Sadhbh"
+ Sile: "Síle"
+ Sorcha: "Sorcha"
+ Una: "Úna"
+
+ #Noble Last Names
+ O_Briain: "Ó Briain"
+ Mac_Fiachra: "Mac Fiachra"
+ O_Neill: "Ó Néill"
+ O_Conchobhair: "Ó Conchobhair"
+ O_Ruairc: "Ó Ruairc"
+ O_Flaithbheartaigh: "Ó Flaithbheartaigh"
+ O_Cinneide: "Ó Cinnéide"
+ O_Caoimh: "Ó Caoimh"
+ Mac_Diarmada: "Mac Diarmada"
+
+ #Common Last Names
+ O_Murchadha: "Ó Murchadha"
+ Mac_Murchadh: "Mac Murchadh"
+ O_Ceallaigh: "Ó Ceallaigh"
+ O_Suilleabhain: "Ó Súilleabháin"
+ Mac_Gabhann: "Mac Gabhann"
+ O_Raghallaigh: "Ó Raghallaigh"
+ O_Dubhghaill: "Ó Dubhghaill"
+ Mac_Carthaigh: "Mac Carthaigh"
+ O_Gallchobhair: "Ó Gallchobhair"
+ O_Dochartaigh: "Ó Dochartaigh"
+ O_Muireadhaigh: "Ó Muireadhaigh"
+ O_Cuinn: "Ó Cuinn"
+ O_Mordha: "Ó Mordha"
+ O_Cearbhaill: "Ó Cearbhaill"
+ O_Conghaile: "Ó Conghaile"
+ O_Dalaigh: "Ó Dálaigh"
+ O_Conaill: "Ó Conaill"
+ O_Braonain: "Ó Braonáin"
+ O_Coileain: "Ó Coileáin"
+ O_Cleirigh: "Ó Cléirigh"
+ O_hAodha: "Ó hAodha"
+ O_Fearghail: "Ó Fearghail"
+ Mac_an_Bhreithiun: "Mac an Bhreithiún"
+ Mac_Uidhir: "Mac Uidhir"
+ O_Floinn: "Ó Floinn"
+ O_Ceallachain: "Ó Ceallacháin"
+ O_Domhnaill: "Ó Domhnaill"
+ O_Mathuna: "Ó Mathúna"
+ O_Dubhthaigh: "Ó Dubhthaigh"
+ O_Baoill: "Ó Baoill"
+ O_hEalaighthe: "Ó hÉalaighthe"
+ O_Seaghdha: "Ó Séaghdha"
+ Mac_Suibhne: "Mac Suibhne"
+ Caomhanach: "Caomhánach"
+ Mac_Giolla_Bhain: "Mac Giolla Bháin"
+ Mac_Bradaigh: "Mac Brádaigh"
+ O_Cathasaigh: "Ó Cathasaigh"
+ Mac_Domhnaill: "Mac Domhnaill"
+ Mac_Mathuna: "Mac Mathúna"
+ O_Riagain: "Ó Riagáin"
+ O_Donnabhain: "Ó Donnabháin"
+
