--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -60,8 +60,8 @@
  FRA_ADJ: "French"
  GAL: "Galicia–Volhynia"
  GAL_ADJ: "Galician"
- GBR: "England"
- GBR_ADJ: "English"
+ GBR: "Britain"
+ GBR_ADJ: "British"
  GCO: "New Granada"
  GCO_ADJ: "Granadian"
  GEO: "Georgia"
