--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -18,6 +18,7 @@
  silesian: "Silesian"
  anglo_dane: "Anglo-Dane"
  irish_norse: "Norse–Gaels"
+ sicilian: "Sikelianoi"
 
  #Colonial Cultures todo come up with unique names.
  elysian: "Elysian"
