--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -184,8 +184,8 @@
  ai_strategy_colony_resource_expansion_desc: "[COUNTRY.GetName] intends to invest in the extraction of natural resources, followed by the production and export of cash crops, while minimizing industrial development."
  ai_strategy_anti_shogunate: "Anti-Shogunate Movement"
  ai_strategy_anti_shogunate_desc: "[COUNTRY.GetName] opposes the rule of the Tokugawa Shogunate, as samurai, commoners, as well as emerging intellectuals and industrialists collectively attempt to overthrow the Shogunate's rule."
- ai_strategy_meiji_restoration: "Meiji Restoration"
- ai_strategy_meiji_restoration_desc: "With the Emperor reclaiming power, the Shogunate era comes to an end, but the direction [COUNTRY.GetName] will take remains uncertain."
+ #ai_strategy_meiji_restoration: "Meiji Restoration"
+ #ai_strategy_meiji_restoration_desc: "With the Emperor reclaiming power, the Shogunate era comes to an end, but the direction [COUNTRY.GetName] will take remains uncertain."
  ai_strategy_meiji_restoration_2: "Meiji Renewal"
  ai_strategy_meiji_restoration_2_desc: "Favored by the Emperor, intellectuals and industrial magnates bring an end to the old samurai system, working towards the modernization of Japan."
  ai_strategy_showa_restoration: "Eight Corners of the World Under One Roof"
