--- a/localization/english/br_objectives_l_english.yml
+++ b/localization/english/br_objectives_l_english.yml
@@ -28,7 +28,7 @@
  objective_egalitarian_society_desc_br_elysium:0 "#lore $br_elysium_FLAVOR_TEXT$#!"
  objective_egalitarian_society_name_br_tartaria:0 "#v $br_tartaria$#!"
  objective_egalitarian_society_desc_br_tartaria:0 "#lore $br_tartaria_FLAVOR_TEXT$#!"
- objective_egalitarian_society_name_CHI:0 "#v $CHI$#!"
- objective_egalitarian_society_desc_CHI:0 "#lore $CHI_FLAVOR_TEXT$#!"
+ #objective_egalitarian_society_name_CHI:0 "#v $CHI$#!"
+ #objective_egalitarian_society_desc_CHI:0 "#lore $CHI_FLAVOR_TEXT$#!"
  objective_egalitarian_society_name_MAL:0 "#v $MAL$#!"
  objective_egalitarian_society_desc_MAL:0 "#lore $MAL_FLAVOR_TEXT$#!"
