--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -90,6 +90,8 @@
  romaioi_military_reorganization: "Military Reorganization"
  br_modifier_independent_new_world_colony: "Independent Colony"
  br_steppe_colonial_expansion: "Steppe Expansion"
+ br_modifier_norse_military_doctrine_2: "Reformerade Svenska Armén"
+ baltic_toll_collection_rights: "Toll Collection Rights"
 
 
  # Horde
@@ -107,8 +109,11 @@
  br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
  br_modifier_italy_venetian_arsenal: "Venetian Arsenal"
 
+ #PLC-RUS
  br_modifier_liberum_veto: "Liberum Veto"
  br_modifier_piotrkow_statutes: "Piotrkow Statutes"
+ br_modifier_russia_buff_1: "Rus"
+ br_modifier_russia_buff_2: "Rus"
 
  br_modifier_edo_class_system: "Edo Social Class System"
  br_modifier_edo_society_ig: "Edo Society"
