fix: add missing localization key

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -93,6 +93,9 @@
  br_modifier_norse_military_doctrine_2: "Reformerade Svenska Armén"
  baltic_toll_collection_rights: "Toll Collection Rights"
 
+ # Tataria
+ end_latin_privileges_TAT: "End Latin Trade Privileges"
+ end_latin_privileges_TAT_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
